--- a/style.css
+++ b/style.css
@@ -89,3 +89,45 @@ select{
     background-position-y: 20px;
 
 }
+
+@media only screen and (max-width: 767px) {
+   .hero {
+    width: 123%;
+    min-height: 123vh;
+    background: linear-gradient(45deg,#010758,#a83b3b);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    color: #fff;
+}
+
+    .hero h1 {
+    font-size: 39px;
+    font-weight: 500;
+    margin-top: -48px;
+    margin-left: 36px;
+    margin-bottom: 50px;
+}
+
+    .row {
+    width: 439px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+    textarea {
+    width: 441px;
+    height: 250px;
+    background: #403d84;
+    color: #fff;
+    font-size: 15px;
+    border: 0;
+    outline: 0;
+    padding: 20px;
+    border-radius: 10px;
+    resize: none;
+    margin-bottom: 30px;
+}
+}
